--- a/App/app/src/main/res/values/themes.xml
+++ b/App/app/src/main/res/values/themes.xml
@@ -3,6 +3,16 @@
     <style name="Base.Theme.MusicManagement" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primary</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorSecondaryVariant">@color/white</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+
+
     </style>
 
     <style name="Theme.MusicManagement" parent="Base.Theme.MusicManagement" />
