--- a/App/app/src/main/res/values/themes.xml
+++ b/App/app/src/main/res/values/themes.xml
@@ -16,4 +16,13 @@
     </style>
 
     <style name="Theme.MusicManagement" parent="Base.Theme.MusicManagement" />
+
+    <style name="Theme.MusicManagement.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MusicManagement.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.MusicManagement.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
